src/styles/oeb/oeb_styles.scss
@use './typography.scss';
@use './elements.scss';

@use '@angular/cdk/overlay-prebuilt.css';

@tailwind base;
@tailwind components;
@tailwind utilities;

html {
	font-family: rubik;
}

.oeb {
	font-family: rubik;
}
/* colors from mycelia */
:root {
	// Style guide

	// Main
	--color-black: #323232;
	--color-purple: #492e98;
	--color-white: #ffffff;

	// System
	--color-red: #ff4849;
	--color-green: #93f993;
	--color-darkgreen: #004f19;

	// Secondary
	--color-lightgray: #f5f5f5;
	--color-midgrey: #dedede;
	--color-darkgray: #757575;
	--color-darkgrey: var(--color-darkgray);
	--color-lavender: #f8f6fc;
	--color-aipurple: #ccd7ff;
	--color-mint: #e4ffe4;
	--color-lightpink: #fff6f6;
	--color-yellow: #ffcc00;
	--color-pink: #ffbab9;

	--color-blue: #7e73ff;

	--color-yellow-50: #fffefa;
	--color-yellow-100: #fff5cb;
	--color-yellow-200: #ffeb9c;
	--color-yellow-300: #ffe26d;
	--color-yellow-400: #ffd83e;
	--color-yellow-500: #ffcf0f;
	--color-yellow-600: #deb200;
	--color-yellow-700: #af8c00;
	--color-yellow-800: #806600;
	--color-yellow-900: #514000;
	--color-yellow-950: #221b00;

	--color-brightpurple: #9747ff;
	--color-buttonhover: #6e30f2;
	--color-lightred: #ff8383;
	--color-pink-50: #ffeaea;
	--color-pink-100: #ffdede;
	--color-pink-200: #ffd2d1;
	--color-pink-300: #ffc6c5;
	--color-pink-400: #ffbab9;
	--color-pink-500: #feacab;
	--color-pink-600: #fd9e9c;
	--color-pink-700: #fc908e;
	--color-pink-800: #fb8281;
	--color-pink-900: #f97573;
	--color-pink-950: #f76866;
	--color-lightgreen: #ecfeed;
	--color-green-50: #e4ffe4;
	--color-green-100: #d3ffd3;
	--color-green-200: #c3fec3;
	--color-green-300: #b2fcb2;
	--color-green-400: #a2fba2;
	--color-green-500: #93f993;
	--color-green-600: #83f783;
	--color-green-700: #74f474;
	--color-green-800: #64f165;
	--color-green-900: #55ee56;
	--color-green-950: #47ea48;

	--color-grayinteractive: #cfcece;
	--color-gray-50: #f3f3f3;
	--color-gray-100: #dedede;
	--color-gray-200: #cacaca;
	--color-gray-300: #b5b5b5;
	--color-gray-400: #a0a0a0;
	--color-gray-500: #8b8b8b;
	--color-gray-600: #777;
	--color-gray-700: #626262;
	--color-gray-800: #4d4d4d;
	--color-gray-900: #383838;
	--color-gray-950: #242424;

	--color-lightpurple: #f1f0ff;
	--color-purple-50: #f8f6fc;
	--color-purple-100: #e2daf3;
	--color-purple-200: #cbbdea;
	--color-purple-300: #b4a1e1;
	--color-purple-400: #9d84d8;
	--color-purple-500: #8567cf;
	--color-purple-600: #6c4ac7;
	--color-purple-700: #5837b4;
	--color-purple-800: #492e98;
	--color-purple-900: #432b88;
	--color-purple-950: #3d2979;

	--color-error-50: #ffd8d8;
	--color-error-100: #ffacac;
	--color-error-200: #ff8080;
	--color-error-300: #ff5455;
	--color-error-400: #ff2829;
	--color-error-500: #fb0001;
	--color-error-600: #cf0001;
	--color-error-700: #a30000;
	--color-error-800: #700;
	--color-error-900: #4b0000;
	--color-error-950: #1f0000;

	--color-warning-50: #ffe6d8;
	--color-warning-100: #ffcdac;
	--color-warning-200: #ffb680;
	--color-warning-300: #ffa354;
	--color-warning-400: #ff9228;
	--color-warning-500: #fb7b00;
	--color-warning-600: #cf6500;
	--color-warning-700: #a35000;
	--color-warning-800: #773a00;
	--color-warning-900: #4b2400;
	--color-warning-950: #1f0f00;

	--color-success-50: ##fcfffd;
	--color-success-100: #cfd;
	--color-success-200: #9dffbd;
	--color-success-300: #6dff9d;
	--color-success-400: #3eff7d;
	--color-success-500: #0eff5d;
	--color-success-600: #00dd48;
	--color-success-700: #00ae39;
	--color-success-800: #007e29;
	--color-success-900: #004f19;
	--color-success-950: #001f0a;

	--color-interactive1: var(--color-purple);
	--color-interactive3: var(--color-lightgray);
	--color-link: #1400ff;

	// spartan
	--font-sans: '';
	--background: 0 0% 100%;
	--foreground: 240 10% 3.9%;
	--card: 0 0% 100%;
	--card-foreground: 240 10% 3.9%;
	--popover: 0 0% 100%;
	--popover-foreground: 240 10% 3.9%;
	--primary: 240 5.9% 10%;
	--primary-foreground: 0 0% 98%;
	--secondary: 240 4.8% 95.9%;
	--secondary-foreground: 240 5.9% 10%;
	--muted: 240 4.8% 95.9%;
	--muted-foreground: 240 3.8% 46.1%;
	--accent: 240 4.8% 95.9%;
	--accent-foreground: 240 5.9% 10%;
	--destructive: 0 84.2% 60.2%;
	--destructive-foreground: 0 0% 98%;
	--border: 240 5.9% 90%;
	--input: 240 5.9% 90%;
	--ring: 240 5.9% 10%;
	--radius: 0.5rem;
}

.navbar {
	background-color: var(--color-lightgray);
}

.navitem {
	font-weight: 400;
	line-height: 30px;
	color: var(--color-black);
}

.navitem .navitem-x-icon {
	fill: var(--color-black);
}

.navitem:focus::after,
.navitem:hover::after {
	background-color: var(--color-grayinteractive);
}
.navitem:active::after,
.navitem.navitem-is-active::after {
	background-color: var(--color-black);
}

.menuitem {
	color: var(--color-black);
}

.menutoggle:focus::before,
.menutoggle:hover::before {
	box-shadow: inset 0 0 0 1px var(--color-black);
}

.menutoggle.menutoggle-is-active span:nth-child(1) {
	background: var(--color-white);
}

.menutoggle.menutoggle-is-active span:nth-child(3) {
	background: var(--color-white);
}

.menutoggle.menutoggle-is-active:focus::before,
.menutoggle.menutoggle-is-active:hover::before {
	box-shadow: inset 0 0 0 1px var(--color-white);
}

.menutoggle span {
	background: var(--color-black);
}

.topbar {
	background-color: white;
}

.topbar .topbar-x-heading {
	color: var(--color-interactive1);
}

.topbar .topbar-x-subheading {
	color: var(--color-black);
}

.footer {
	border-top: none;
	padding-top: calc(var(--gridspacing) * 12);
	padding-bottom: calc(var(--gridspacing) * 12);
	grid-area: 'footer';
}

.footer [href] {
	color: var(--color-purple);
}

.footer[href]:hover,
.footer [href]:hover {
	color: var(--color-purple);
	text-decoration: underline;
}

.footer .footer-x-links li:not(:last-child) {
	border-right: none;
	margin-right: unset;
	padding-right: unset;
}

.navbar .navbar-x-logo img {
	height: unset;
	max-width: 134px;
}

.u-background-light2 {
	background-color: white;
}

.forminput .forminput-x-label {
	--typography-size: 20px;
	font-size: var(--typography-size);
	font-style: normal;
	line-height: calc(var(--typography-size) + 4px);
	font-weight: 600;
	display: block;
	margin-bottom: 3px;
}

.forminput .forminput-x-formFieldAside {
	font-weight: 400;
}

.forminput .forminput-x-inputs input {
	height: 40px;
	border: 1px solid var(--color-purple);
	border-radius: 10px;
}

.oeb-input-hide-arrows {
	/* Hide arrows from input number - Firefox */
	input[type='number'] {
		-moz-appearance: textfield;
	}

	/* Hide arrows from input number - Chrome, Safari, Edge, Opera */
	input::-webkit-outer-spin-button,
	input::-webkit-inner-spin-button {
		-webkit-appearance: none;
		margin: 0;
	}
}

.oeb-breadcrumbs {
	margin-bottom: 24px;
	padding-bottom: 16px;
	border-bottom: 1px solid theme('colors.grey.85');
}

.oeb-max-form-width {
	width: 100%;
	max-width: 456.5px;
}

@media (min-width: 768px) {
	.o-container:not(.o-container-is-managed) .navbar .navbar-x-logo img {
		max-width: 134px;
	}

	.oeb-max-form-width {
		max-width: 637.5px;
	}
}

@media (max-width: 768px) {
	.forminput .forminput-x-inputs input {
		height: 27.742px;
		border-radius: 7px;
		border: 0.7px solid var(--color-purple);
	}

	.forminput .forminput-x-label {
		--typography-size: 14px;
		font-size: var(--typography-size);
		line-height: 16.8px;
	}

	.u-margin-bottom2x {
		margin-bottom: 10px;
	}
}

#altcha {
	appearance: auto;
}

#altcha_checkbox {
	appearance: auto;
}

// tag extensions
.tag {
	&-button {
		cursor: pointer;
	}
	&-button-pressed {
		background-color: var(--color-interactive1);
		color: var(--color-light1);
		border-color: var(--color-interactive1);
	}
	&-close {
		padding-right: 32px;
		background: transparent url('../../breakdown/static/scss/images/tooltip-close.svg') right 8px center no-repeat;
		background-size: 12px 12px;
	}
	&-delete {
		&:hover {
			background-color: var(--color-lightpink);
		}
	}
}

// override brn-select default styles to display scrollbars
[data-brn-select-viewport] {
	scrollbar-width: thin !important;

	&::-webkit-scrollbar {
		display: initial !important;
	}

	hlm-option {
		box-sizing: border-box;
	}
}

// tw-break-words uses overflow-wrap and does not cover all cases
.oeb-break-words {
	word-break: break-word;
}

